<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding"
    tools:context="ca.edumedia.riba0007.stylesandthemesdemo.MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_explode"
        android:onClick="moveToSecondActivity"/>

    <TextView
        style="@style/AppSmallText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smallText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mediumText" />

    <TextView
        style="@style/AppLargeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/largeText" />

    <TextView
        style="@style/AppExtraLargeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/extraLargeText" />

    <TextView
        style="@style/AppExtraLargeTextLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/extraLargeLight" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:textColor="@color/colorRadioButton"
        android:textSize="@dimen/size_radioButton"
        android:text="@string/radioButton"/>

    <TextView
        android:id="@+id/txvGradient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gradient"
        android:textAlignment="center"
        android:textSize="@dimen/size_extraExtraLargeText"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shadowColor="@color/colorTextShadow"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="10"
        android:text="@string/shadow"
        android:textAlignment="center"
        android:textSize="@dimen/size_extraExtraLargeText"
        android:textStyle="bold" />

    <Button
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:text="@string/buttonDrawable"
        android:background="@drawable/button_background_selector"
        android:textColor="@android:color/white"/>

    <Button
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:textColor="@color/button_color_selector"
        android:text="@string/buttonColor" />

</LinearLayout>
